# airflow-teams

./: README.md  provider.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/teserak/airflow/providers/teams/: __init__.py  get_provider_info.py  version_compat.py
src/teserak/airflow/providers/teams/hooks/: teams_webhook.py
src/teserak/airflow/providers/teams/notifications/: adaptive_card.py  teams.py
src/teserak/airflow/providers/teams/operators/: teams_webhook.py
tests/: conftest.py
tests/unit/teams/hooks/: test_teams_webhook.py
tests/unit/teams/notifications/: test_adaptive_card.py  test_teams.py
tests/unit/teams/operators/: test_teams_webhook.py
