[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teserak-airflow-providers-teams"
version = "1.0.0"
description = "Provider package teserak-airflow-providers-teams for Apache Airflow"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["airflow-provider", "teams", "microsoft-teams", "airflow", "integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "apache-airflow>=2.11.0",
    "apache-airflow-providers-http",
    "apache-airflow-providers-common-compat>=1.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "aioresponses",
    "apache-airflow",
    "apache-airflow-providers-http",
    "apache-airflow-providers-common-compat",
]

[project.urls]
"Source Code" = "https://github.com/teserak/airflow-teams"
"Bug Tracker" = "https://github.com/teserak/airflow-teams/issues"

[project.entry-points."apache_airflow_provider"]
provider_info = "teserak.airflow.providers.teams.get_provider_info:get_provider_info"

[tool.hatch.build.targets.wheel]
packages = ["src/teserak"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
